# OctoRig

./: .gitignore  CLAUDE.md  README.md  octorig.sh
platform/backend/: Dockerfile  alembic.ini  pyproject.toml
platform/backend/alembic/: env.py
platform/backend/alembic/versions/: add_assessment_completed_at.py  add_assessments.py  add_challenge_lab_template_id.py  add_deployment_network_isolation.py  add_hide_lab_ports.py  add_login_lockout.py  add_owner_flag.py  add_platform_roles.py  add_python_editor_toggle.py  add_ranks.py  add_refresh_tokens.py  add_site_settings.py  add_theme_settings.py  db_init.py  drop_admin_superuser_flags.py  drop_lab_template_static_network.py  drop_profile_twitter_handle.py  hardening_indexes.py
platform/backend/app/: cli.py  config.py  database.py  main.py
platform/backend/app/api/: admin.py  api_keys.py  assessments.py  auth.py  badges.py  challenges.py  content.py  deployments.py  deps.py  events.py  events_ws.py  labs.py  marketplace.py  notifications.py  profiles.py  ranks.py  roles.py  scheduler.py  scoreboards.py  system.py  teams.py
platform/backend/app/badge_catalog/: __init__.py  competition.py  milestone.py  skill_idor.py  skill_python.py  skill_recon.py  skill_sqli.py  skill_web.py  (+1 more)
platform/backend/scripts/: import_firerange_challenges.py
platform/backend/tests/: conftest.py  test_admin.py  test_assessments_concurrency.py  test_auth.py  test_challenge_rendering.py  test_challenges.py  test_deployments.py  test_events.py  test_network_allocator.py  test_notifications.py  test_profiles.py  test_roles.py  test_teams.py
(+827 files in other folders)
