[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octorig-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "psycopg2-binary==2.9.9",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",
    "pydantic-settings==2.5.2",
    "httpx==0.27.2",
    "docker==7.1.0",
    "websockets==13.1",
    "celery[redis]==5.3.6",
    "slowapi==0.1.9",
    "python-multipart==0.0.9",
    "cryptography==43.0.1",
    "email-validator==2.2.0",
    "python-json-logger==2.0.7",
    "tenacity==8.5.0",
    "circuitbreaker==2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
